--- a/labels/src/main/res/values/attr.xml
+++ b/labels/src/main/res/values/attr.xml
@@ -70,5 +70,6 @@
         <attr name="wordMargin" format="dimension" />
         <attr name="labelBackground" format="reference|color" />
         <attr name="singleLine" format="boolean" />
+        <attr name="labelCancelIcon" format="reference"/>
     </declare-styleable>
 </resources>
