--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         app:labelTextPaddingRight="10dp"
         app:labelTextPaddingTop="5dp"
         app:labelTextSize="14sp"
-        app:labelCancelIcon="@drawable/ic_cancel_black_24dp"
+        app:labelDelIcon="@drawable/ic_cancel_black_24dp"
         app:labelTextWidth="wrap_content"
         app:lineMargin="10dp"
         app:maxSelect="0"
